style/schedule.css
/* Use target page background */
.schedules-container, .schedules-widget  {
    background:rgba(0,0,0,0)!important;
}

/* Media query for IE 10-11. Fixes schedule table being larger than the container */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    .normal-schedules table, .schedules-widget table {
        word-break: break-all;
        table-layout: fixed;
        width: 100%;
    }
}

.normal-schedules  .date-container, .schedules-widget .date-container {
    width: auto;
    padding-right: 5%;
    padding-top: 4px;
}

.normal-schedules td, .schedules-widget td {
    word-wrap: break-word;
    word-break: break-word;
}

@media screen and (max-width: 499px) {
    .normal-schedules {
        margin-left: calc(50% - 48.33vw);
        margin-right: calc(50% - 50vw);
        width: 100vmin;
        align-content: center;
    }

    .info-span {
        padding-left: 1em;
        padding-right: 1em;
    }
}

@media screen and (max-width: 768px) {
    .table {
        text-align: center;
    }

    .day-name, .time--sub, .main-schedule {
        text-align: left;
    }
}

@media screen and (min-width: 500px) and (max-width: 768px) {
    .normal-schedules {
        margin-left: -25px;
        margin-right: -25px;
    }
}

.day-name, .main-schedule {
    font-weight: 600;
}

.normal-schedules {
    margin-bottom: 2.8em;
}

/* Navigation */
#scheduleTitle {
    text-align: center;
    padding-bottom: 0.25em;
    margin-bottom: 0.75em;
}

#lastWeek:focus, #nextWeek:focus {
    border: solid 2px #025BA9;
}

.thead-light {
    font-size: 1.2rem;
    background: #EDF1F5;
    text-align: center;
}

.info-span, .info-span-lg {
    margin-left: 0.3em;
    margin-bottom: 0.95em;
    display: flex;
    align-items: center;
    justify-content: center;
}

.info-span-lg i, .info-span i {
    margin-right: 0.8em!important;
}


.info-span-lg i {
    margin-top: 0!important;
    font-size: 1.45em!important;
    margin-left: .5em;
}

.info-span i {
    font-size: 1.25em!important;
    margin-top: 3px;
}

#weekNumber, .btn-arrow {
    font-weight: 600;
}

.btn-back {
    float: left;
    width: 30px;
}

.btn-next {
    float: right;
    width: 30px;
}

#weekNumber {
    display: inline-block;
}

.info-text {
    font-weight: 400;
    display: flex;
    white-space: normal;
    text-align: left;
    float: left;
    word-break: break-word;
}

#scheduleInfos td {
    padding-top: 15px!important;
}

.thead-light td {
    margin-bottom: 25px!important;
}

.schedules-weekly tr.time--sub td {
    border-width: 0;
    padding-top: 0;
}

.time--sub {
    font-size: 0.93em;
}

/* Colors for openings. .today is overwritten if not closed. */
.today {
    background: #FCF8E3;
}

.is-open {
    background: #D7F5CD;
}

.is-closed {
    background: #F5DBD6;
}

.is-self-service {
    background: #E1F7FA;
}

.fa-level-up-alt, .fa-info-circle {
    margin-right: 0.2em;
}

.fa-info-circle {
    margin-right: 0.45em!important;
}

/* Large schedules are used for iDiD info screens */
/*
.large-schedules .fa-info-circle {
    margin-top: 0.25em!important;
}
*/
.large-schedules .info-row td {
    padding-top: 0.05em!important;
}

.large-schedules .fa-level-up-alt, .large-schedules .fa-info-circle {
    margin-right: 0.4em;
    margin-left: 0.15em;
}

.large-schedules .fa-level-up-alt {
    margin-left: 0.25em;
}

.large-schedules button {
    display: none;
}

.large-schedules .thead-light {
    display: none;
}

.large-schedules {
    margin-top: 2%;
}

.large-schedules .closed {
    padding-top: 0.4em;
}

.large-schedules .date-container {
    width: 21%!important;
    padding-left: 4%!important;
}

.large-schedules table {
    border-bottom: 1px solid #DEE2E6;
}

.large-schedules td {
    padding-bottom: 0.17em!important;
}

/* L-font (default) */
.large-schedules td, .large-schedules th{
    font-size: 1.8em;
}

.large-schedules .date-container, .large-schedules .day-name {
    padding-top: 0.4em!important;
    font-weight: 600;
    font-size: 1.7em;
}

.large-schedules .main-schedule {
    padding-top: 0.45em;
    font-weight: 600;
    font-size: 1.6em;
}

.large-schedules .info-span-lg {
    padding-left: 1.6em;
    margin-top: -10px;
}

.large-schedules .info-span-lg .fa-info-circle {
    margin-right: 0.8em!important;
    padding-top: 10px;
}

.large-schedules  .info-span-lg i {
    font-size: 1.3em!important;
}

.large-schedules .info-span i {
    font-size: 1.2em!important;
}

.m-font .info-span-lg i, .m-font .info-span i, .l-font .info-span-lg i, .l-font .info-span i, .xl-font .info-span-lg i, .xl-font .info-span i {
    margin-top: 6px!important;
}

.xxl-font .info-span-lg i, .xxl-font .info-span i {
    margin-top: 8px!important;
}

/* medium-font, used if schedule contains so many rows L-font would not fit well. */
.m-font td, .m-font th{
    font-size: 1.8em;
}

.m-font .date-container, .m-font .day-name {
    font-size: 1.9em;
}

.m-font .main-schedule {
    font-size: 1.7em;
}

.m-font .info-span-lg {
    font-size: 1.55rem;
}

.m-font .info-span-lg {
    font-size: 1.5rem;
}

/* XL-font */
.xl-font td,.xl-font th{
    font-size: 2.05em;
}

.xl-font .date-container, .xl-font .day-name {
    font-size: 2.15em;
}

.xl-font .main-schedule {
    font-size: 1.95em;
}

.xl-font .info-span-lg {
    font-size: 1.85rem;
}

/* XXL-font */
.xxl-font td,.xxl-font th{
    font-size: 2.85em;
}

.xxl-font .date-container, .xxl-font .day-name {
    font-size: 2.75em;
}

.xxl-font .main-schedule {
    padding-top: 0.45em;
    font-weight: 600;
    font-size: 2.65em;
}

.xxl-font .info-span-lg {
    font-size: 2.35rem;
}

